--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="yandex-verification" content="2bce268d0db1d640" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favico/apple-touch-icon.png">
@@ -14,13 +13,8 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="js/SmoothScroll.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+
 <title>Уральская вагоноремонтная компания</title>
 </head>
 
@@ -40,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="collapsibleNavId">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item text-uppercase">
-						<a class="nav-link" href="#">О компании</a>
+						<a class="nav-link" href="pages/about.html">О компании</a>
 					</li>
 					<li class="nav-item text-uppercase">
 						<a class="nav-link" href="#">Услуги</a>
@@ -198,9 +192,9 @@
 					<h6>26.06.2019</h6>
 					<img src="img/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur numquam suscipit
-							expedita minus sed officia eos libero. Laborum sit provident omnis vitae inventore ullam
-							unde.</p>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
+							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
+							accusantium tempore.</p>
 					</a>
 				</div>
 			</div>
@@ -209,9 +203,9 @@
 					<h6>06.04.2019</h6>
 					<img src="img/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus illum accusamus facere non
-							voluptates quod consequuntur optio, omnis ab maiores, distinctio harum assumenda? Suscipit,
-							ut.</p>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
+							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
+							accusantium tempore.</p>
 					</a>
 				</div>
 			</div>
@@ -300,6 +294,10 @@
 				</div>
 			</div>
 		</footer>
+		<script src="js/jquery-3.4.1.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/SmoothScroll.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script>
 			$(document).ready(function () {
 				$('.grs').tooltip({
