--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="yandex-verification" content="2bce268d0db1d640" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favico/apple-touch-icon.png">
@@ -14,32 +13,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="../js/SmoothScroll.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full&skin=dark"></script>
-    <script type="text/javascript">
-        var map;
-        DG.then(function () {
-            map = DG.map('map', {
-                center: [53.4711, 59.05],
-                zoom: 15,
-                dragging: true,
-                touchZoom: true,
-                scrollWheelZoom: true,
-                doubleClickZoom: true,
-                boxZoom: true,
-                geoclicker: true,
-                zoomControl: true,
-                fullscreenControl: true
-            });
-            DG.marker([53.472, 59.0505]).addTo(map).bindPopup(popup);
-        });
-    </script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+
     <title>Контакты</title>
 </head>
 
@@ -58,7 +33,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="#">О компании</a>
+                        <a class="nav-link" href="about.html">О компании</a>
                     </li>
                     <li class="nav-item text-uppercase">
                         <a class="nav-link" href="#">Услуги</a>
@@ -178,6 +153,29 @@
             </div>
         </div>
     </footer>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/SmoothScroll.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full&skin=dark"></script>
+    <script type="text/javascript">
+        var map;
+        DG.then(function () {
+            map = DG.map('map', {
+                center: [53.4711, 59.05],
+                zoom: 15,
+                dragging: true,
+                touchZoom: true,
+                scrollWheelZoom: true,
+                doubleClickZoom: true,
+                boxZoom: true,
+                geoclicker: true,
+                zoomControl: true,
+                fullscreenControl: true
+            });
+            DG.marker([53.472, 59.0505]).addTo(map);
+        });
+    </script>
 </body>
 
 </html>
