--- a/pages/about.html
+++ b/pages/about.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>О компании</title>
 </head>
 
@@ -50,9 +51,14 @@
             <p>Уральская<br>Вагоноремонтная<br>Компания</p>
         </div>
     </div>
+
+    <!-- О компании -->
+
+    <!-- Лицензии -->
     <div class="licenses">
-        <h4>Лицензии:</h4>
-        <div class="row">
+       <h4  data-toggle="collapse" data-target="#show">Лицензии <i class="fa fa-arrow-down" aria-hidden="true"></i>
+       </h4>
+        <div id="show" class="row collapse">
             <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
                 <a href="../img/licenses/1305.jpg" data-fancybox="gallery" data-caption="Caption #1">
                     <img src="../img/licenses/1305.jpg" alt="licenses-img" />
@@ -95,6 +101,7 @@
             </div>
         </div>
     </div>
+
     <!-- Футер -->
     <footer>
         <div class="row">
