--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="container-fluid">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
-				<img src="img/logo.png" height="35" alt="uvk">
+				<img src="img/main/logo.png" height="35" alt="uvk">
 			</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
 				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -83,7 +83,7 @@
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-6">
-							<div class="services"><img src="img/repair-vagon.jpg" alt="serv-img" class="rounded"></div>
+							<div class="services"><img src="img/main/repair-vagon.jpg" alt="serv-img" class="rounded"></div>
 						</div>
 					</div>
 					<h5>Мы ремонтируем:</h5>
@@ -152,7 +152,7 @@
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-6">
-							<div class="services"><img src="img/repair-pair.jpg" alt="serv-img" class="rounded"></div>
+							<div class="services"><img src="img/main/repair-pair.jpg" alt="serv-img" class="rounded"></div>
 						</div>
 					</div>
 				</div>
@@ -168,7 +168,7 @@
 			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
 				<div class="news-block">
 					<h6>01.05.2019</h6>
-					<img src="img/news-3.jpg" alt="news-img">
+					<img src="img/main/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
 						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
 							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
@@ -179,7 +179,7 @@
 			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
 				<div class="news-block">
 					<h6>01.05.2019</h6>
-					<img src="img/news-3.jpg" alt="news-img">
+					<img src="img/main/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
 						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
 							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
@@ -190,7 +190,7 @@
 			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
 				<div class="news-block">
 					<h6>26.06.2019</h6>
-					<img src="img/news-3.jpg" alt="news-img">
+					<img src="img/main/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
 						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
 							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
@@ -201,7 +201,7 @@
 			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
 				<div class="news-block">
 					<h6>06.04.2019</h6>
-					<img src="img/news-3.jpg" alt="news-img">
+					<img src="img/main/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
 						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
 							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
