--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="../index.html">
-                <img src="../img/logo.png" height="35" alt="uvk">
+                <img src="../img/main/logo.png" height="35" alt="uvk">
             </a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -53,7 +53,16 @@
     </div>
 
     <!-- О компании -->
-
+<div class="info">
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eveniet ut blanditiis magnam quam iste dolores dignissimos quibusdam numquam excepturi aspernatur possimus pariatur corporis quo dolorum, fuga repellendus non natus unde cumque commodi. Qui esse consequatur, adipisci atque magnam fugiat iure dolorem explicabo quos expedita corrupti ad, ea obcaecati non.
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit pariatur unde consequuntur ea adipisci eius eos incidunt molestias omnis, debitis aliquam tenetur eum dolorum assumenda deleniti similique iusto repudiandae qui cum ab sequi atque placeat obcaecati impedit. Sapiente corporis dolore maiores dignissimos saepe laudantium porro! Velit commodi ratione consequuntur accusantium.
+        </div>
+    </div>
+</div>
     <!-- Лицензии -->
     <div class="licenses">
        <h4  data-toggle="collapse" data-target="#show">Лицензии <i class="fa fa-arrow-down" aria-hidden="true"></i>
@@ -90,13 +99,13 @@
                 </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
-                <a href="../img/licenses/harp.jpg" data-fancybox="gallery" data-caption="Caption #1">
-                    <img src="../img/licenses/harp.jpg" alt="licenses-img" />
+                <a href="../img/licenses/harp.png" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="../img/licenses/harp.png" alt="licenses-img" />
                 </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
-                <a href="../img/licenses/ovk.jpg" data-fancybox="gallery" data-caption="Caption #1">
-                    <img src="../img/licenses/ovk.jpg" alt="licenses-img" />
+                <a href="../img/licenses/ovk.png" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="../img/licenses/ovk.png" alt="licenses-img" />
                 </a>
             </div>
         </div>
@@ -128,16 +137,6 @@
             </div>
         </div>
     </footer>
-    <script>
-        $('[data-fancybox="images"]').fancybox({
-            buttons: [
-                'close'
-            ],
-            thumbs: {
-                autoStart: true
-            }
-        });
-    </script>
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/SmoothScroll.js"></script>
