--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>Контакты</title>
 </head>
 
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="../index.html">
-                <img src="../img/logo.png" height="35" alt="uvk">
+                <img src="../img/main/logo.png" height="35" alt="uvk">
             </a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
