--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
 						Телефон +7 (3519) 24-86-24<br>
 						Факс +7 (3519) 24-86-22<br>
-						Е-mail secretary@uvrk.ru</p>
+						Е-mail info@uvrk.ru</p>
 				</div>
 				<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
 					<p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
