--- a/pages/about.html
+++ b/pages/about.html
@@ -56,10 +56,10 @@
 <div class="info">
     <div class="row">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eveniet ut blanditiis magnam quam iste dolores dignissimos quibusdam numquam excepturi aspernatur possimus pariatur corporis quo dolorum, fuga repellendus non natus unde cumque commodi. Qui esse consequatur, adipisci atque magnam fugiat iure dolorem explicabo quos expedita corrupti ad, ea obcaecati non.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tempora eius, asperiores eos voluptate qui aperiam recusandae corrupti. Porro, voluptatibus quo accusantium eaque vero dicta itaque ipsam ullam dolores nostrum obcaecati atque necessitatibus sequi laudantium. Debitis exercitationem molestiae ad sequi dicta fugit saepe enim possimus fugiat necessitatibus similique amet perspiciatis, quia magnam, modi est nesciunt dolores in numquam dolorum inventore soluta repellat ratione! Placeat minima debitis iure, aliquid omnis perspiciatis quibusdam voluptate distinctio eos quas eligendi deleniti eaque nesciunt fugit earum iusto. Voluptatibus debitis quos perferendis dolores obcaecati, unde est voluptates repudiandae excepturi! Optio, quasi mollitia! Quibusdam maxime in saepe tempora unde, fugiat delectus enim non, velit corporis obcaecati illum accusamus neque molestias? Vel aliquam explicabo nam recusandae perspiciatis voluptatibus delectus nihil quaerat repudiandae temporibus corporis nemo neque, vitae ea quod adipisci quia earum cumque quos consequatur itaque molestias, officiis molestiae. Adipisci omnis consequuntur veniam labore quos ipsam velit dolorem corporis suscipit aut fuga quas eos temporibus voluptatem sit quibusdam modi earum nam perspiciatis minima esse officia, consectetur illum. Velit nobis ea quidem accusamus beatae iusto debitis tempore? Sapiente optio quisquam possimus non sequi ea architecto vero officia laboriosam rerum!</p>
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit pariatur unde consequuntur ea adipisci eius eos incidunt molestias omnis, debitis aliquam tenetur eum dolorum assumenda deleniti similique iusto repudiandae qui cum ab sequi atque placeat obcaecati impedit. Sapiente corporis dolore maiores dignissimos saepe laudantium porro! Velit commodi ratione consequuntur accusantium.
+           <img src="../img/about-origin.jpg" alt="">
         </div>
     </div>
 </div>
@@ -119,7 +119,7 @@
                     455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
                     Телефон +7 (3519) 24-86-24<br>
                     Факс +7 (3519) 24-86-22<br>
-                    Е-mail secretary@uvrk.ru</p>
+                    Е-mail info@uvrk.ru</p>
             </div>
             <div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
                 <p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
