--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,13 @@
 <div class="info">
     <div class="row">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tempora eius, asperiores eos voluptate qui aperiam recusandae corrupti. Porro, voluptatibus quo accusantium eaque vero dicta itaque ipsam ullam dolores nostrum obcaecati atque necessitatibus sequi laudantium. Debitis exercitationem molestiae ad sequi dicta fugit saepe enim possimus fugiat necessitatibus similique amet perspiciatis, quia magnam, modi est nesciunt dolores in numquam dolorum inventore soluta repellat ratione! Placeat minima debitis iure, aliquid omnis perspiciatis quibusdam voluptate distinctio eos quas eligendi deleniti eaque nesciunt fugit earum iusto. Voluptatibus debitis quos perferendis dolores obcaecati, unde est voluptates repudiandae excepturi! Optio, quasi mollitia! Quibusdam maxime in saepe tempora unde, fugiat delectus enim non, velit corporis obcaecati illum accusamus neque molestias? Vel aliquam explicabo nam recusandae perspiciatis voluptatibus delectus nihil quaerat repudiandae temporibus corporis nemo neque, vitae ea quod adipisci quia earum cumque quos consequatur itaque molestias, officiis molestiae. Adipisci omnis consequuntur veniam labore quos ipsam velit dolorem corporis suscipit aut fuga quas eos temporibus voluptatem sit quibusdam modi earum nam perspiciatis minima esse officia, consectetur illum. Velit nobis ea quidem accusamus beatae iusto debitis tempore? Sapiente optio quisquam possimus non sequi ea architecto vero officia laboriosam rerum!</p>
+            <p>Акционерное общество «Уральская вагоноремонтная компания» зарегистрировано 18 июля 2006 года.
+
+                Профессионализм, качество, надежность, - вот те критерии, благодаря которым компания завоевала доверие и добрую славу от собственников подвижного состава.
+                
+                Следуя европейским стандартам организации производственного процесса, предприятие стремится проводить освоение автоматизации оборудования и внедрять программы, нацеленные на повышение производительности и обеспечение комфортных условий труда работников.
+                
+                Главный приоритет для нашей компании - это интересы собственников подвижного состава. Надежность, индивидуальный подход к каждому клиенту, компетентность персонала - это принципы деятельности АО «УВК», которые позволяют уверенно работать, решая поставленные задачи и отвечая требованиям самых взыскательных клиентов.</p>
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
            <img src="../img/about-origin.jpg" alt="">
