--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -56,32 +56,32 @@
                 <table class="table">
                     <tbody>
                         <tr>
-                            <td scope="row">Генеральный директор</td>
+                            <td scope="row"><span>Генеральный директор</span></td>
                             <td>Боднар Виктор Евгеньевич</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
                         <tr>
-                            <td scope="row">Первый заместитель генерального директора</td>
+                            <td scope="row"><span>Первый заместитель генерального директора</span></td>
                             <td> Рузанова Зоя Александровна</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
                         <tr>
-                            <td scope="row">Главный инженер</td>
+                            <td scope="row"><span>Главный инженер</span></td>
                             <td>Морин Виталий Владимирович</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
                         <tr>
-                            <td scope="row">Заместитель генерального директора по качеству и технологии</td>
+                            <td scope="row"><span>Заместитель генерального директора по качеству и технологии</span></td>
                             <td>Юхименко Елена Геннадьевна</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
                         <tr>
-                            <td scope="row">Финансовый директор</td>
+                            <td scope="row"><span>Финансовый директор</span></td>
                             <td>Бобринский Вячеслав Александрович</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
                         <tr>
-                            <td scope="row">Начальник отдела сбыта</td>
+                            <td scope="row"><span>Начальник отдела сбыта</span></td>
                             <td>Чанчикова Надежда Николаевна</td>
                             <td>Тел: 24-86-20<br> test@uvrk.ru</td>
                         </tr>
