--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
     <!-- О компании -->
 <div class="info">
     <div class="row">
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="col-12 col-sm-ппр12 col-md-6 col-lg-6">
             <p>Акционерное общество «Уральская вагоноремонтная компания» зарегистрировано 18 июля 2006 года.
 
                 Профессионализм, качество, надежность, - вот те критерии, благодаря которым компания завоевала доверие и добрую славу от собственников подвижного состава.
