--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body>
 
 	<!-- Навбар -->
-	<div class="container-fluid">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
 				<img src="img/main/logo.png" height="35" alt="uvk">
@@ -47,9 +46,19 @@
 			</div>
 		</nav>
 		<div class="name">
-			<p>Уральская<br>Вагоноремонтная<br>Компания</p>
+			<img src="img/main/main.jpg"
+  srcset="
+    img/main/main-mobile.jpg 320w,
+    img/main/main-wide-mobile.jpg 480w,
+    img/main/main-tablet.jpg 768w,
+    img/main/main-desktop.jpg 1024w,
+    img/main/main-hires.jpg 1280w"
+  sizes="
+    (max-width: 20em) 30vw,
+    (max-width: 30em) 60vw,
+    (max-width: 40em) 90vw"
+  alt="УВК">
 		</div>
-	</div>
 
 	<!-- Услуги -->
 	<div id="accordion">
